# agent-orchestrator

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  FRONTEND_SETUP_GUIDE.md  GETTING_STARTED_GUIDE.md  MIGRATION_INSTRUCTIONS.md  QUESTION_GENERATION_GUIDE.md  alembic.ini  docker-compose.yml  pyproject.toml  setup.md
alembic/: env.py
alembic/versions/: 20260128_133617_initial_migration.py  20260128_135038_rename_model_config_to_llm_config.py
src/agent_orchestrator/: config.py  main.py
src/agent_orchestrator/agents/: builder.py  executor.py  tool_registry.py
src/agent_orchestrator/api/: __init__.py  dependencies.py  exception_handlers.py  middleware.py
src/agent_orchestrator/api/routes/: __init__.py  agent_tools.py  agents.py  execution_steps.py  executions.py  files.py  health.py  sessions.py  tools.py  workflow_edges.py  workflow_nodes.py  workflows.py
src/agent_orchestrator/core/: __init__.py  exceptions.py
src/agent_orchestrator/core/interfaces/: provider.py  tool.py
src/agent_orchestrator/core/schemas/: __init__.py  agent.py  common.py  execution.py  file.py  session.py  tool.py  workflow.py
src/agent_orchestrator/database/: __init__.py  engine.py  session.py
src/agent_orchestrator/database/models/: __init__.py  agent.py  base.py  execution.py  tool.py  workflow.py
src/agent_orchestrator/files/: __init__.py  processor.py
src/agent_orchestrator/files/extractors/: __init__.py  base.py  image.py  pdf.py  text.py  word.py
src/agent_orchestrator/files/ocr/: base.py  factory.py  mistral.py  tesseract.py
src/agent_orchestrator/providers/: __init__.py  anthropic.py  anthropic_provider.py  base.py  factory.py  google.py  google_provider.py  openai.py  openai_provider.py
src/agent_orchestrator/services/: __init__.py  agent_service.py  execution_service.py  tool_service.py  workflow_service.py
src/agent_orchestrator/sessions/: manager.py  store.py
src/agent_orchestrator/streaming/: sse.py  websocket.py
src/agent_orchestrator/tools/: __init__.py  base.py  registry.py
src/agent_orchestrator/tools/builtin/: __init__.py  calculator.py  file_writer.py  http_tool.py  mistral_ocr.py
src/agent_orchestrator/workflows/: __init__.py  builder.py  checkpointer.py  compiler.py  state.py
src/agent_orchestrator/workflows/nodes/: __init__.py  agent_node.py  parallel_node.py  router_node.py
src/agent_orchestrator/workflows/patterns/: conditional.py  dag.py  parallel.py  sequential.py
